test/semantic/error/err_04_use_before_decl.pl0
program useBeforeDecl;
begin
  x := 1; { Error: declared below }
end;
var x; 
begin end